Bug 101237 - some svg files not displaying in version 5.2.0
Summary: some svg files not displaying in version 5.2.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:5.3.0 target:5.2.2
Keywords: bibisected, bisected, filter:svg, regression
Depends on:
Blocks:
 
Reported: 2016-07-31 17:00 UTC by David
Modified: 2016-10-02 23:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
svg image (35.10 KB, image/svg+xml)
2016-07-31 17:00 UTC, David
Details
sample svg test document (21.33 KB, application/vnd.oasis.opendocument.text)
2016-07-31 17:02 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2016-07-31 17:00:14 UTC
Created attachment 126500 [details]
svg image

Create a new writer document.  Attempt to insert the attached svg into the document.  There is no preview display for it and it does not display in the document.

This is a data loss issue, as previously to 5.2.0 this did work.  I've only tested this on debian linux 64bit.
Comment 1 David 2016-07-31 17:02:17 UTC
Created attachment 126501 [details]
sample svg test document

attached sample document with image inserted.
Comment 2 David 2016-07-31 17:03:09 UTC
I did completely remove LibreOffice and re-installed.  I also removed the user profile directory.
Comment 3 MM 2016-07-31 17:48:38 UTC
Unconfirmed with v5.1.5.2 under ubuntu 16.04 x64.
Confirmed with v5.2.0.3 under ubuntu 16.04 x64.
Confirmed with v5.2.0.1 under ubuntu 14.04 x64.
Comment 4 Regina Henschel 2016-07-31 23:51:05 UTC
Reproducible with Version: 5.2.1.0.0+
Build ID: 620c00bf2279ccedf3fadefecc68186e25827b59
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-2, Time: 2016-07-14_11:50:03
Locale: de-DE (de_DE); Calc: group

View is OK in Version: 5.1.6.0.0+
Build ID: 88dc41490189a6ccc218c633c6385d4e99af0216
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-1, Time: 2016-07-13_20:47:38
Locale: de-DE (de_DE); Calc: group
Comment 5 Caolán McNamara 2016-08-02 10:38:02 UTC
This is probably a problem since...

commit c2d130425cc876cceb96cc7e47636426a9e48fa8
Author: Xisco Fauli <anistenis@gmail.com>
Date:   Sat Mar 26 16:23:23 2016 +0100
Comment 6 Xisco Faulí 2016-08-02 11:03:02 UTC
ok, I take this...
Comment 7 Björn Michaelsen 2016-08-24 22:00:33 UTC
Assuming bisected to imply bibisected, thus adding the latter. This is to make queries for "bibisected" not miss out bisected bugs.
Comment 8 Xisco Faulí 2016-08-30 14:31:59 UTC
I've just submitted a new patch to gerrit for this issue: https://gerrit.libreoffice.org/#/c/28500/
Comment 9 Commit Notification 2016-08-30 20:42:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=75003438e4b429ffb3f013afd0e36d70545833cc

tdf#101237 SVGIO: Use black as default when parents' fill...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-09-01 10:21:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5811f80ca2b7a34acd43137b649fd7b362dc0048&h=libreoffice-5-2

tdf#101237 SVGIO: Use black as default when parents' fill...

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 David 2016-10-02 23:36:54 UTC
Yes, it looks like the issue is corrected.